--- a/v2/organisms/tabs/tabs.html
+++ b/v2/organisms/tabs/tabs.html
@@ -36,23 +36,69 @@
     <main>
       <section class="row wide">
         <h1 class="title">Tabs</h1>
-        <p>Tabs organize content across different screens, data sets, and other interactions. The tabs structure consists of an unordered list with a corresponding tab id will become visible when the tab is clicked.</p>
+        <p>Tabs are a familiar and convenient way to display groups of related information where only one tab is active and shown while the other tabs are hidden or obscured until the user clicks or touches the tab trigger to reveal it.</p>
+        <p>The Delta Design System uses an unordered list to create a block of tab triggers. We then use css <code>transform</code> to manipulate tab content to show and hide active and inactive tabs.</p>
+        <p>In future releases we will improve both the visual design and function of tabs, as well as explore additional options for layout. You can make your own adjustments in the meantime by changing things like the css width and flexbox values for the <code>.tab</code> container, <code>ul</code>, and <code>.tab-group</code>.</p>
       </section>
       <section class="row wide">
-        <h2>Tab Examples</h2>
-        <ul class="tabs">
-          <li class="tab-a">Bridge</li>
-          <li class="tab-b">Building</li>
-          <li class="tab-c">Field</li>
-        </ul>
-        <div class="tab-row">
-          <div class="tab a show">
-          </div>
-          <div class="tab b">
-          </div>
-          <div class="tab c">
+        <h2>Tab Example</h2>
+        <div class="tabs">
+          <ul>
+            <li class="tab-a active">Bridge</li>
+            <li class="tab-b">Building</li>
+            <li class="tab-c">Field</li>
+          </ul>
+          <div class="tab-group">
+            <div class="tab a active">
+              <figure>
+                <img src="../../assets/images/bridge-2x.jpg" srcset="../../assets/images/bridge-1x.jpg 1x, ../../assets/images/bridge-2x.jpg 2x" alt="Example of image used in card layout">
+                <figcaption><cite><a href="https://www.stockio.com/free-photo/bridge-mason-jones" target="_blank">Bridge</a> by Mason Jones</cite></figcaption>
+              </figure>
+            </div>
+            <div class="tab b">
+              <figure>
+                <img src="../../assets/images/building-2x.jpg" srcset="../../assets/images/building-1x.jpg 1x, ../../assets/images/building-2x.jpg 2x" alt="Example of image used in card layout">
+                <figcaption><cite><a href="https://www.stockio.com/free-photo/building-coen-van" target="_blank">Building</a> by Coen Van</cite></figcaption>
+              </figure>
+            </div>
+            <div class="tab c">
+              <figure>
+                <img src="../../assets/images/field-2x.jpg" srcset="../../assets/images/field-1x.jpg 1x, ../../assets/images/field-2x.jpg 2x" alt="Example of image used in card layout">
+                <figcaption><cite><a href="https://www.stockio.com/free-photo/field-konrad-marx" target="_blank">Field</a> by Konrad Marx</cite></figcaption>
+              </figure>
+            </div>
           </div>
         </div>
+        <figure>
+          <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;tabs&quot;&gt;
+  &lt;ul&gt;
+    &lt;li class=&quot;tab-a active&quot;&gt;Bridge&lt;/li&gt;
+    &lt;li class=&quot;tab-b&quot;&gt;Building&lt;/li&gt;
+    &lt;li class=&quot;tab-c&quot;&gt;Field&lt;/li&gt;
+  &lt;/ul&gt;
+  &lt;div class=&quot;tab-group&quot;&gt;
+    &lt;div class=&quot;tab a active&quot;&gt;
+      &lt;figure&gt;
+        &lt;img src=&quot;../../assets/images/bridge-2x.jpg&quot; srcset=&quot;../../assets/images/bridge-1x.jpg 1x, ../../assets/images/bridge-2x.jpg 2x&quot; alt=&quot;Example of image used in card layout&quot;&gt;
+        &lt;figcaption&gt;&lt;cite&gt;&lt;a href=&quot;https://www.stockio.com/free-photo/bridge-mason-jones&quot; target=&quot;_blank&quot;&gt;Bridge&lt;/a&gt; by Mason Jones&lt;/cite&gt;&lt;/figcaption&gt;
+      &lt;/figure&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;tab b&quot;&gt;
+      &lt;figure&gt;
+        &lt;img src=&quot;../../assets/images/building-2x.jpg&quot; srcset=&quot;../../assets/images/building-1x.jpg 1x, ../../assets/images/building-2x.jpg 2x&quot; alt=&quot;Example of image used in card layout&quot;&gt;
+        &lt;figcaption&gt;&lt;cite&gt;&lt;a href=&quot;https://www.stockio.com/free-photo/building-coen-van&quot; target=&quot;_blank&quot;&gt;Building&lt;/a&gt; by Coen Van&lt;/cite&gt;&lt;/figcaption&gt;
+      &lt;/figure&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;tab c&quot;&gt;
+      &lt;figure&gt;
+        &lt;img src=&quot;../../assets/images/field-2x.jpg&quot; srcset=&quot;../../assets/images/field-1x.jpg 1x, ../../assets/images/field-2x.jpg 2x&quot; alt=&quot;Example of image used in card layout&quot;&gt;
+        &lt;figcaption&gt;&lt;cite&gt;&lt;a href=&quot;https://www.stockio.com/free-photo/field-konrad-marx&quot; target=&quot;_blank&quot;&gt;Field&lt;/a&gt; by Konrad Marx&lt;/cite&gt;&lt;/figcaption&gt;
+      &lt;/figure&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
+        </figure>
       </section>
     </main>
     <footer>
