Card updates for section landing pages

--- a/v2/downloads/downloads.html
+++ b/v2/downloads/downloads.html
@@ -10,6 +10,19 @@
     <link href="https://fonts.googleapis.com/css?family=Ovo&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../css/master.css" rel="stylesheet">
+    <style>
+      @media (min-width: 48rem) {
+        .card-group {
+          justify-content: flex-start;
+          width: calc(100% + 2rem);
+          margin: 0 -1rem;
+        }
+        .card-group .card {
+          width: calc(33% - 2rem);
+          margin: 1rem;
+        }
+      }
+    </style>
   </head>
   <body>
     <header>
