html validation updates

--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -91,6 +91,7 @@
         </div>
       </section>
       <section class="row wide" style="padding: 2rem;">
+        <h2 class="visuallyhidden">Sample Banner Code</h2>
         <figure>
           <figcaption>html</figcaption>
 <pre><code>&lt;section class=&quot;banner tall left dark bg-photo left-center fixed&quot; style=&quot;background-image: url(../../assets/images/bratislava-2x.jpg);&quot;&gt;
@@ -114,6 +115,7 @@
         </div>
       </section>
       <section class="row wide" style="padding: 2rem;">
+        <h2 class="visuallyhidden">Sample Banner Code</h2>
         <figure>
           <figcaption>html</figcaption>
 <pre><code>&lt;section class=&quot;banner short right light bg-photo right-center&quot; style=&quot;background-image: url(../../assets/images/london-2x.jpg);&quot;&gt;
@@ -135,6 +137,7 @@
         </div>
       </section>
       <section class="row wide">
+        <h2 class="visuallyhidden">Sample Banner Code</h2>
         <figure>
           <figcaption>html</figcaption>
 <pre><code>&lt;section class=&quot;banner left dark bg-dk-blue&quot;&gt;
