--- a/organisms/tabs/tabs.html
+++ b/organisms/tabs/tabs.html
@@ -63,7 +63,7 @@
       <div class="logo">
         <a href="../../index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
-        
+        </a>
       </div>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
@@ -71,10 +71,10 @@
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
         <ul id="header-navigation">
-          <li><a href="../../about/about.html">About</li>
-          <li><a href="../../atoms/atoms.html">Atoms</li>
-          <li><a href="../../molecules/molecules.html">Molecules</li>
-          <li><a href="../../organisms/organisms.html">Organisms</li>
+          <li><a href="../../about/about.html">About</a></li>
+          <li><a href="../../atoms/atoms.html">Atoms</a></li>
+          <li><a href="../../molecules/molecules.html">Molecules</a></li>
+          <li><a href="../../organisms/organisms.html">Organisms</a></li>
           <li><a href="../../style/style.html">Style</a></li>
           <li><a href="../../downloads/downloads.html">Downloads</a></li>
         </ul>
