--- a/molecules/blockquotes/blockquotes.html
+++ b/molecules/blockquotes/blockquotes.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Blockquotes | Delta Design System</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
