Revert "Updated Search"
This reverts commit bb1cfb29e15da2e1402c0c88479e4edf3d9610f4.

--- a/molecules/search/search.html
+++ b/molecules/search/search.html
@@ -78,17 +78,17 @@
           <li><a href="../../style/style.html">Style</a></li>
           <li><a href="../../downloads/downloads.html">Downloads</a></li>
         </ul>
-        <button class="trigger" tabindex="0">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M11 2c4.968 0 9 4.032 9 9s-4.032 9-9 9-9-4.032-9-9 4.032-9 9-9zm0 16c3.867 0 7-3.133 7-7 0-3.868-3.133-7-7-7-3.868 0-7 3.132-7 7 0 3.867 3.132 7 7 7zm8.485.071l2.829 2.828-1.415 1.415-2.828-2.829 1.414-1.414z"/></svg>            
-        </button>
         <form class="search" role="search">
           <fieldset>
             <input type="search" name="q" id="search-input" placeholder="Search" aria-label="Search site content">
             <label for="search-input">Search</label>
-            <button class="input-icon close">
+            <div class="input-icon close">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
-            </button>
+            </div>
           </fieldset>
+          <span class="button trigger">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M11 2c4.968 0 9 4.032 9 9s-4.032 9-9 9-9-4.032-9-9 4.032-9 9-9zm0 16c3.867 0 7-3.133 7-7 0-3.868-3.133-7-7-7-3.868 0-7 3.132-7 7 0 3.867 3.132 7 7 7zm8.485.071l2.829 2.828-1.415 1.415-2.828-2.829 1.414-1.414z"/></svg>            
+          </span>
           <button type="submit">Search</button>
         </form>
       </nav>
