--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -129,6 +129,30 @@
 &lt;/section&gt;</code></pre>
         </figure>
       </section>
+      <section class="banner split bg-white">
+        <figure>
+          <img src="../../assets/images/macbook-pro-16-2x.png" srcset="../../assets/images/macbook-pro-16-1x.png 1x, ../../assets/images/macbook-pro-16-2x.png 2x" alt="Example of image used in split banner">
+        </figure>
+        <div class="text">
+          <h2>Split Banner</h2>
+          <p>Banners are a key visual organism in the Delta Design System. This is a split banner.</p>
+        </div>
+      </section>
+      <section class="row wide" style="padding: 2rem;">
+        <h2 class="visuallyhidden">Sample Banner Code</h2>
+        <figure>
+          <figcaption>html</figcaption>
+<pre><code>&lt;section class=&quot;banner split&quot;&gt;
+  &lt;figure&gt;
+    &lt;img src=&quot;../../assets/images/macbook-pro-16-2x.jpg&quot; srcset=&quot;../../assets/images/macbook-pro-16-1x.jpg 1x, ../../assets/images/macbook-pro-16-2x.jpg 2x&quot; alt=&quot;Example of image used in split banner&quot;&gt;
+  &lt;/figure&gt;
+  &lt;div class=&quot;text&quot;&gt;
+    &lt;h2&gt;Split Banner&lt;/h2&gt;
+    &lt;p&gt;Banners are a key visual organism in the Delta Design System. This is a split banner.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/section&gt;</code></pre>
+        </figure>
+      </section>
       <section class="banner left dark bg-dk-blue">
         <div class="text">
           <h2>Solid Color Banners</h2>
